updated test case